Updated my study notes

--- a/数据结构学习/二叉堆实现优先级队列.md
+++ b/数据结构学习/二叉堆实现优先级队列.md
@@ -1,4 +1,84 @@
 # 二叉堆实现优先级队列
 ## 2020/11/19
 ***
-挣扎了好长时间，我总算可以学我想学的东西啦！今天是我正式入坑的第一天，我接触的第一个数据结构知识点是二叉堆，
+挣扎了好长时间，我总算可以学我想学的东西啦！今天是我正式入坑的第一天，我接触的第一个数据结构知识点是二叉堆，到目前为止，我仅仅是能略微理解一点而已。
+
+二叉堆，是一种完全二叉树，存储在线性列表内，二叉堆的操作只有两种，上浮（swim）和下沉（sink），它利用下标来构建树的关系，代码实现如下：
+```
+int parent (int a)
+{
+    return a/2;
+}
+
+int left (int a)
+{
+    return a * 2;
+}
+
+int right (int a)
+{
+    return a * 2 + 1;
+}
+```
+第一次见到这三个函数，正常都会是一头雾水，但请别急，先看看下面这个表格，它可以良好地描述这个二叉堆构造树的原理及特点：
+
+|   数组下标    |   0   |   1   |   2   |   3   |   4   |   5   |   6   |   7   |   8   |   9   |
+|   ---------- |   --- |   --- |   --- |   --- |   --- |   --- |   --- |   --- |   --- |   --- |
+|              |//空着不用| 1   |       |       |       |       |       |       |       |       |
+|              |       |       |    2   |   3   |       |       |       |       |       |       |
+|              |       |       |       |       |   4   |   5   |   6   |   7   |       |       |
+
+以上表格已经体现二叉堆构建树的理念：
+坐标为1的单元作为根节点，与坐标为2的单元和坐标为3的单元连接构建二叉树关系，坐标为2的单元又与坐标为4的单元和坐标为5的单元连接构建二叉树关系，坐标为3的单元又与坐标为6的单元和坐标为7的单元连接构建二叉树关系，依此类推，二叉树的型就浮现在眼前了。
+
+如今我理解构建的理念，但也仅仅是能构建二叉堆，不会利用它实现优先级队列排序......
+因为学习资料是用Java实现的算法，而目前我只是学了C和Python，完全不理解Java，因此这个到底是什么鬼我也不懂......
+```
+public class MaxPQ <Key extends Comparable<Key>> {
+    // 存储元素的数组
+    private Key[] pq;
+    // 当前 Priority Queue 中的元素个数
+    private int N = 0;
+
+    public MaxPQ(int cap) {
+        // 索引 0 不用，所以多分配一个空间
+        pq = (Key[]) new Comparable[cap + 1];
+    }
+
+    /* 返回当前队列中最大元素 */
+    public Key max() {
+        return pq[1];
+    }
+
+    /* 插入元素 e */
+    public void insert(Key e) {...}
+
+    /* 删除并返回当前队列中最大元素 */
+    public Key delMax() {...}
+
+    /* 上浮第 k 个元素，以维护最大堆性质 */
+    private void swim(int k) {...}
+
+    /* 下沉第 k 个元素，以维护最大堆性质 */
+    private void sink(int k) {...}
+
+    /* 交换数组的两个元素 */
+    private void exch(int i, int j) {
+        Key temp = pq[i];
+        pq[i] = pq[j];
+        pq[j] = temp;
+    }
+
+    /* pq[i] 是否比 pq[j] 小？ */
+    private boolean less(int i, int j) {
+        return pq[i].compareTo(pq[j]) < 0;
+    }
+
+    /* 还有 left, right, parent 三个方法 */
+}
+```
+目前凭我对C#的浅薄理解， 我只能看出来这段创建了一个MaxPQ的类空间然后就声明多个方法（MaxPQ、max、insert、delMax、swim、sink、exch、less），各个方法顾名思义都可以看得出来作用，这里就不具体说了......然后问过人才知道`<Key extends Comparable<Key>>`这种东西是用于提高函数的类型通用性 *（虽然我还不是很懂，但至少认为这个会存在类型安全性风险问题）* ，可以让用户自己去定义变量类型，从而使这种算法更加普适。
+以上Java代码如果用C语言实现应该是如下：（由于C语言不存在泛型的概念，因此暂且使用类型int来表示算法，为了便于维护，我们可以使用typedef来代替某类型，修改时只需修改一次）
+```
+
+```
